[gd_scene load_steps=5 format=3 uid="uid://b6ckjs1ud563j"]

[ext_resource type="Texture2D" uid="uid://ch1ins151k217" path="res://assets/placeholder.png" id="1_6rbau"]
[ext_resource type="Script" path="res://scenes/additional/library_additional/notes_search.gd" id="1_j3qyx"]
[ext_resource type="PackedScene" uid="uid://0q5tkry7k6e0" path="res://scenes/additional/library_additional/note_search_additional/pages.tscn" id="2_fq1uo"]
[ext_resource type="PackedScene" uid="uid://dml43dmpcyrki" path="res://scenes/additional/library_additional/note_search_additional/fitlers_window.tscn" id="4_b8tok"]

[node name="table_notes" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j3qyx")

[node name="margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="vbox" type="VBoxContainer" parent="margin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="search" type="HBoxContainer" parent="margin/vbox"]
layout_mode = 2
alignment = 1

[node name="search_request" type="LineEdit" parent="margin/vbox/search"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Text entry"

[node name="fitlers" type="Button" parent="margin/vbox/search"]
layout_mode = 2
text = "Filters (0)"

[node name="search" type="Button" parent="margin/vbox/search"]
layout_mode = 2
size_flags_horizontal = 8
text = "Seacrh"

[node name="view" type="VBoxContainer" parent="margin/vbox"]
layout_mode = 2
size_flags_vertical = 3

[node name="columns" type="MarginContainer" parent="margin/vbox/view"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="columns" type="HBoxContainer" parent="margin/vbox/view/columns"]
layout_mode = 2

[node name="Label" type="Label" parent="margin/vbox/view/columns/columns"]
layout_mode = 2
size_flags_horizontal = 3
text = "Image"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="margin/vbox/view/columns/columns"]
layout_mode = 2
size_flags_horizontal = 3
text = "Item name"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="margin/vbox/view/columns/columns"]
layout_mode = 2
size_flags_horizontal = 3
text = "Item desc"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="margin/vbox/view/columns/columns"]
layout_mode = 2
size_flags_horizontal = 3
text = "Item damage"
horizontal_alignment = 1

[node name="pages" parent="margin/vbox" instance=ExtResource("2_fq1uo")]
layout_mode = 2

[node name="scroll" type="ScrollContainer" parent="margin"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="HFlowContainer" type="HFlowContainer" parent="margin/scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="item" type="PanelContainer" parent="margin/scroll/HFlowContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="margin/scroll/HFlowContainer/item"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="vbox" type="VBoxContainer" parent="margin/scroll/HFlowContainer/item/MarginContainer"]
layout_mode = 2

[node name="image" type="TextureRect" parent="margin/scroll/HFlowContainer/item/MarginContainer/vbox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("1_6rbau")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="margin/scroll/HFlowContainer/item/MarginContainer/vbox"]
layout_mode = 2
text = "Horikine pike"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="margin/scroll/HFlowContainer/item/MarginContainer/vbox"]
layout_mode = 2
text = "1d4 + 3"
horizontal_alignment = 1

[node name="item2" type="PanelContainer" parent="margin/scroll/HFlowContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="margin/scroll/HFlowContainer/item2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="vbox" type="VBoxContainer" parent="margin/scroll/HFlowContainer/item2/MarginContainer"]
layout_mode = 2

[node name="image" type="TextureRect" parent="margin/scroll/HFlowContainer/item2/MarginContainer/vbox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("1_6rbau")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="margin/scroll/HFlowContainer/item2/MarginContainer/vbox"]
layout_mode = 2
text = "Hellblade super sword"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="margin/scroll/HFlowContainer/item2/MarginContainer/vbox"]
layout_mode = 2
text = "1d4 + 3"
horizontal_alignment = 1

[node name="filters" parent="." instance=ExtResource("4_b8tok")]
visible = false

[connection signal="pressed" from="margin/vbox/search/fitlers" to="." method="_on_fitlers_pressed"]
[connection signal="pressed" from="margin/vbox/search/search" to="." method="_on_search_pressed"]
